--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = content
 	url = https://github.com/vvasuki/english.git
 	branch = content
+[submodule "themes/sanskrit-documentation-theme-hugo"]
+	path = themes/sanskrit-documentation-theme-hugo
+	url = https://github.com/sanskrit-coders/sanskrit-documentation-theme-hugo.git
