--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://vvasuki.github.io/english/"
+baseURL = "https://vishvAsa.github.io/english/"
 languageCode = "en-us"
 title = "Vishvas's English lit"
 theme = "sanskrit-documentation-theme-hugo"
