--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,8 @@ disablePathToLower = true
 [params]
   githubEditMePathBase = "https://github.com/vishvAsa/english/edit/hugo-source/content/"
   contactLink = "https://github.com/vishvAsa/english/issues/new"
+  build_img = "https://github.com/vishvAsa/english/actions/workflows/build.yml/badge.svg"
+  build_url = "https://github.com/vishvAsa/english/actions/workflows/build.yml"
   fullSearchURL = "/full_search"
   env = "production"
   disqusShortcode = "vvasuki-site"
