--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -9,8 +9,8 @@ contents:
         url: ../jyotiSham/
       - title: संस्कृतम्
         url: ../sanskrit/
-      - title: संस्कारः
-        url: ../saMskAra/
+      - title: देवः
+        url: ../devaH/
       - title: आगमः
         url: ../AgamaH/
       - title: कल्पान्तरम्
