--- a/config.toml
+++ b/config.toml
@@ -20,4 +20,17 @@ disablePathToLower = true
   section = ["HTML", "RSS", "JSON"]
 
 [markup.goldmark.renderer]
-  unsafe= true
+   unsafe = true
+
+[markup.highlight]
+  anchorLineNos = false
+  codeFences = true
+  guessSyntax = false
+  hl_Lines = ''
+  lineAnchors = ''
+  lineNoStart = 1
+  lineNos = true
+  lineNumbersInTable = true
+  noClasses = true
+  style = 'friendly'
+  tabWidth = 2
