--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -52,6 +52,6 @@ contents:
       - title: भाषान्तरम्
         url: ../bhAShAntaram/
       - title: Vishvas's home page
-        url: /index.html
+        url: ../
   - title: <i class="fas fa-hand-holding-heart"></i>Donate Via Vishvas
     url: https://vishvAsa.github.io/interests/dharma-via-vishvas/
